# insurance-app/services/public_plans_service/app/models/plans.py
@@ -1,0 +1,7 @@
+from pydantic import BaseModel
+
+class Plan(BaseModel):
+    plan_id: str
+    name: str
+    description: str
+    image_key: str
